SyntaxAnalyzer/src/main/antlr4/br/unilins/es/compiladores/syntaxanalyzer/SynGrammar.g4
grammar SynGrammar;

TIPO_VAR: 'INTEIRO' | 'REAL';

NUMINT:	('0'..'9')+;

NUMREAL: ('0'..'9')+ ('.' ('0'..'9')+)?;

OP_BOOL: 'E' | 'OU';
	
VARIAVEL: ('a'..'z'|'A'..'Z') ('a'..'z'|'A'..'Z'|'0'..'9')*;

CADEIA: '\'' ( ESC_SEQ | ~('\''|'\\') )* '\'';
	
OP_ARIT1: '+' | '-';

OP_ARIT2: '*' | '/';

OP_REL:	'>' | '>=' | '<' | '<=' | '<>' | '=';
	
fragment
ESC_SEQ: '\\\'';

COMENTARIO: '#' ~('\n'|'\r')* '\r'? '\n' {skip();};

ESPAÇO: ( ' ' |'\t' | '\r' | '\n') {skip();};
	
programa: ':' 'DECLARACOES' listaDeclaracoes ':' 'ALGORITMO' listaComandos EOF;
	
listaDeclaracoes: declaracao listaDeclaracoes | declaracao;
	
declaracao: VARIAVEL ':' TIPO_VAR;
	
expressaoAritmetica: expressaoAritmetica OP_ARIT1 termoAritmetico | termoAritmetico;
	
termoAritmetico: termoAritmetico OP_ARIT2 fatorAritmetico | fatorAritmetico;
	
fatorAritmetico : NUMINT | NUMREAL | VARIAVEL | '(' expressaoAritmetica ')';
	
expressaoRelacional: expressaoRelacional OP_BOOL termoRelacional | termoRelacional;
	
termoRelacional: expressaoAritmetica OP_REL expressaoAritmetica | '(' expressaoRelacional ')';
	

listaComandos: comando listaComandos | comando;
	
comando: comandoAtribuicao | comandoEntrada | comandoSaida | comandoCondicao | comandoRepeticao | subAlgoritmo;
	
comandoAtribuicao: 'ATRIBUIR' expressaoAritmetica 'A' VARIAVEL;
	
comandoEntrada: 'LER' VARIAVEL;

comandoSaida: 'IMPRIMIR' (VARIAVEL | CADEIA);
	
comandoCondicao: 'SE' expressaoRelacional 'ENTAO' comando | 'SE' expressaoRelacional 'ENTAO' comando 'SENAO' comando;
	
comandoRepeticao: 'ENQUANTO' expressaoRelacional comando;

subAlgoritmo: 'INICIO' listaComandos 'FIM';
